# DAM

./: .gitignore  Cargo.toml  README.md  create_icon.ps1  tauri.conf.json
crates/index/: Cargo.toml
crates/index/src/: document.rs  error.rs  lib.rs  text_search.rs  vector.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: detector.rs  error.rs  lib.rs  monitor.rs  parser.rs  preview.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs
crates/process/: Cargo.toml
crates/process/src/: embedding.rs  error.rs  generation.rs  lib.rs  tagging.rs  transcription.rs  whisper_ffi.rs
crates/schema/: Cargo.toml
crates/schema/src/: asset.rs  error.rs  ipc.rs  lib.rs  models.rs  search.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/ui/: Cargo.toml  build.rs  create_icon.ps1  tauri.conf.json
crates/ui/icons/: icon.icns
crates/ui/src/: app.rs  error.rs  lib.rs  main.rs  state.rs
crates/ui/src/commands/: assets.rs  library.rs  mod.rs  search.rs  settings.rs
crates/versioning/: Cargo.toml
crates/versioning/src/: lib.rs
demo/: Cargo.toml
demo/src/: main.rs
gui-demo/: Cargo.toml
gui-demo/src/: main.rs
gui-demo/static/: app.js  index.html  styles.css
memory-bank/: activeContext.md  decisions.md  learn.md  progress.md  projectbrief.md  summary.md  systemPatterns.md  techContext.md
src/: main.rs
test_assets/: sample_data.csv  sample_metadata.json  sample_text.txt
