[package]
name = "dam-demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
schema = { path = "../crates/schema" }
ingest = { path = "../crates/ingest" }
index = { path = "../crates/index" }
server = { path = "../crates/server" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
