[package]
name = "gui-demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
schema = { path = "../crates/schema" }
ingest = { path = "../crates/ingest" }
index = { path = "../crates/index" }
actix-web = { workspace = true }
actix-files = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
