[package]
name = "ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Shared schema
schema = { path = "../schema" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# File system
walkdir = { workspace = true }
notify = { workspace = true }

# Serialization  
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }
uuid = { workspace = true }

# Crypto for hashing
sha2 = { workspace = true }
blake3 = { workspace = true }

# Image processing
image = { workspace = true }
psd = "0.3"

# 3D file formats
gltf = { workspace = true }
obj-rs = "0.7"

# Audio/Video metadata
symphonia = { workspace = true }

# File type detection
infer = "0.15"
mime = "0.3"
