[package]
name = "ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
schema = { path = "../schema" }
index = { path = "../index" }
ingest = { path = "../ingest" }
# process = { path = "../process" }  # Temporarily disabled until whisper.lib is compiled
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
tauri = { version = "2.0", features = [] }
thiserror = { workspace = true }
dirs = "5.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
